# papi_template

./: CMakeLists.txt  profile.hpp  profile_test.cpp
lib/: papi.cmake
